--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,25 +1,25 @@
 <div class="c-form-box">
   <form class="c-form" action="{% if site.author-email %}https://formspree.io/{{site.author-email}}{% else %}#{% endif %}" method="POST">
     <div class="c-form-bnt__close" data-icon='ei-close' data-size='s'></div>
-      <div class="c-form__title">You can contact me!</div>
+      <div class="c-form__title">Contatta la rivisteria!</div>
     <div class="c-form__group">
-      <label for="form-name">Your Name (Required)</label>
+      <label for="form-name">Il tuo nome * </label>
       <input class="c-form__input" id="form-name" type="text" name="name" required>
     </div>
     <div class="c-form__group">
-      <label for="form-email">Your Email (Required)</label>
+      <label for="form-email">La tua mail * </label>
       <input class="c-form__input" id="form-email" type="email" name="_replyto" required>
     </div>
     <div class="c-form__group">
-      <label for="form-subject">Subject</label>
+      <label for="form-subject">Oggetto</label>
       <input class="c-form__input" id="form-subject" type="text" name="_subject">
     </div>
     <div class="c-form__group">
-      <label for="form-text">Your Message (Required)</label>
+      <label for="form-text">Il tuo messaggio *</label>
       <textarea class="c-form__input" id="form-text" name="text" rows="10" required></textarea>
     </div>
     <div class="c-form__group">
-      <button class="c-btn c-btn--secondary c-btn--big c-btn--shadow" type="submit">Send</button>
+      <button class="c-btn c-btn--secondary c-btn--big c-btn--shadow" type="submit">Invia</button>
     </div>
   </form>
 </div> <!-- /.c-form-box -->
