--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <div class="c-header__box">
     <div class="c-search">
       <div class="c-search__box">
-        <label for="js-search-input" class="u-screen-reader-text">Search for Blog</label>
-        <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="Type to search...">
+        <label for="js-search-input" class="u-screen-reader-text">Cerca nella rivisteria</label>
+        <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="Cerca nella rivisteria...">
         <div data-icon='ei-search' data-size='s'></div>
       </div>
       <ul id="js-results-container" class="c-search-results-list"></ul>
