--- a/_includes/form.html
+++ b/_includes/form.html
@@ -3,11 +3,11 @@
     <div class="c-form-bnt__close" data-icon='ei-close' data-size='s'></div>
       <div class="c-form__title">Contatta la rivisteria!</div>
     <div class="c-form__group">
-      <label for="form-name">Il tuo nome * </label>
+      <label for="form-name">Il tuo nome </label>
       <input class="c-form__input" id="form-name" type="text" name="name" required>
     </div>
     <div class="c-form__group">
-      <label for="form-email">La tua mail * </label>
+      <label for="form-email">La tua mail </label>
       <input class="c-form__input" id="form-email" type="email" name="_replyto" required>
     </div>
     <div class="c-form__group">
@@ -15,7 +15,7 @@
       <input class="c-form__input" id="form-subject" type="text" name="_subject">
     </div>
     <div class="c-form__group">
-      <label for="form-text">Il tuo messaggio *</label>
+      <label for="form-text">Il tuo messaggio</label>
       <textarea class="c-form__input" id="form-text" name="text" rows="10" required></textarea>
     </div>
     <div class="c-form__group">
