--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,11 +14,11 @@ layout: default
     </div>
     <div class="c-contact-menu">
       {% if site.author-email %}
-      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Send me</a>
+      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Scrivi alla rivisteria!</a>
       {% else %}
       {% endif %}
-      {% if site.author-twitter %}
-      <a href="https://twitter.com/intent/user?screen_name={{ site.social-twitter }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-twitter' data-size='s'></span> Follow me</a>
+      {% if site.author-instagram %}
+      <a href="https://instagram.com/intent/user?screen_name={{ site.social-instagram }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-instagram' data-size='s'></span> Segui</a>
       {% else %}
       {% endif %}
     </div>
