--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
       {% else %}
       {% endif %}
       {% if site.author-instagram %}
-      <a href="https://instagram.com/intent/user?screen_name={{ site.social-instagram }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-instagram' data-size='s'></span> Segui</a>
+      <a href="https://instagram.com/user?screen_name={{ site.social-instagram }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-instagram' data-size='s'></span> Segui</a>
       {% else %}
       {% endif %}
     </div>
