--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,7 +1,7 @@
 <div class="c-form-box">
   <form class="c-form" action="{% if site.author-email %}https://formspree.io/{{site.author-email}}{% else %}#{% endif %}" method="POST">
     <div class="c-form-bnt__close" data-icon='ei-close' data-size='s'></div>
-      <div class="c-form__title">Contatta la rivisteria!</div>
+      <div class="c-form__title">Scrivi</div>
     <div class="c-form__group">
       <label for="form-name">Il tuo nome </label>
       <input class="c-form__input" id="form-name" type="text" name="name" required>
