--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,11 +14,11 @@ layout: default
     </div>
     <div class="c-contact-menu">
       {% if site.author-email %}
-      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Scrivi alla rivisteria!</a>
+      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Scrivi</a>
       {% else %}
       {% endif %}
       {% if site.author-instagram %}
-      <a href="https://instagram.com/user?screen_name={{ site.social-instagram }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-instagram' data-size='s'></span> Segui</a>
+      <a href="https://instagram.com/{{ site.social-instagram }}" class="c-btn c-btn--primary c-btn--round c-btn--shadow"><span data-icon='ei-sc-instagram' data-size='s'></span> Segui</a>
       {% else %}
       {% endif %}
     </div>
