--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
     <div class="c-nav">
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
-          <div data-icon='ei-pencil' data-size='s'></div> Posts</li>
+          <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
         <li class="c-nav__item">
-          <div data-icon='ei-star' data-size='s'></div> Categories</li>
+          <div data-icon='ei-star' data-size='s'></div> Riviste</li>
       </ul>
     </div>
   </div>
