--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,9 +60,10 @@ layout: home
         {% endfor %}
         </div>
       </div> <!-- /.c-recent-post -->
-      {% if site.disqus-identifier %}
-        {% include disqus-comments.html %}
-      {% endif %}
+      <!-- Neutralizzazione del disqus -->
+      <!-- {% if site.disqus-identifier %} -->
+        <!-- {% include disqus-comments.html %} -->
+      <!-- {% endif %} -->
     </div> <!-- /.c-wrap-content -->
   </div> <!-- /.c-article__content -->
 </article> <!-- /.c-article-page -->
