--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,14 @@
     {{ include_to_scssify | scssify }}
   </style>
   
-{% if jekyll.environment == 'production' %}
-{% include analytics.html %}
-{% endif %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6JKZTEBSJ9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6JKZTEBSJ9');
+</script>
   
 </head>
