--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,6 @@
 {% include analytics.html %}
 {% endif %}
   
+<script data-ad-client="ca-pub-3765935657134703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
 </head>
