--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,3 +72,9 @@ layout: default
 <main class="c-content">
   {{ content }}
 </main> <!-- /.c-content -->
+
+<script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@1.7.1/v1/cookiesGlow.min.js" async></script>
+<script>
+    var AnalyticsCode = "G-6JKZTEBSJ9"; // Your Analytics tracking code (Optional)
+    var linkHref = "https://link-to-your-cookies.html"; // Your Cookies Policy link
+</script>
