--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,5 +76,6 @@ layout: default
 <script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@1.7.1/v1/cookiesGlow.min.js" async></script>
 <script>
     var AnalyticsCode = "G-6JKZTEBSJ9"; // Your Analytics tracking code (Optional)
-    var linkHref = "https://link-to-your-cookies.html"; // Your Cookies Policy link
+    var linkHref = "https://mariobarbarino.github.io/privacy-policy.html"; // Your Cookies Policy link
+    var bannerPosition = "right"
 </script>
