--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,4 +78,10 @@ layout: default
     var AnalyticsCode = "G-6JKZTEBSJ9"; // Your Analytics tracking code (Optional)
     var linkHref = "https://mariobarbarino.github.io/privacy-policy.html"; // Your Cookies Policy link
     var bannerPosition = "right"
+    // texts
+    var btn1Text = "Accetta i cookies";
+    var btn2Text = "Rifiuta";
+    var bannerDescription = "In questo sito sono utilizzati cookies tecnici per migliorare l’esperienza di uso e tracciare il numero di visite.";
+    var linkTexto = "Leggi di più sulla Privacy Policy";
+    var manageText = "Cookies";
 </script>
