--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,5 +83,5 @@ layout: default
     var btn2Text = "Rifiuta";
     var bannerDescription = "In questo sito sono utilizzati cookies tecnici per migliorare l’esperienza di uso e tracciare il numero di visite.";
     var linkTexto = "Leggi di più sulla Privacy Policy";
-    var manageText = "Cookies";
+    var manageText = "Gestisci i cookies";
 </script>
