--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@ layout: default
       {% endif %}
     </div>
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
+     [Manifesto e copyright]({% post_url 2020-10-26-Manifesto %})
   </div>
 
   <div class="c-sidebar-footer">
