--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
       {% endif %}
     </div>
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
-     <a href="{% https://mariobarbarino.github.io/2020/10/26/Manifesto/ %}">Manifesto e copyright</a>
+    <a href="https://mariobarbarino.github.io/2020/10/26/Manifesto/">Manifesto e copyright</a>
   </div>
 
   <div class="c-sidebar-footer">
