--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,5 +1,5 @@
 <div class="c-form-box">
-  <form class="c-form" action="{% if site.author-email %}https://formspree.io/{{site.author-email}}{% else %}#{% endif %}" method="POST">
+  <form class="c-form" action="{% if site.author-formspree %}https://formspree.io/{{site.author-formspree}}{% else %}#{% endif %}" method="POST">
     <div class="c-form-bnt__close" data-icon='ei-close' data-size='s'></div>
       <div class="c-form__title"> Scrivi</div>
     <div class="c-form__group">
