--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,6 +63,7 @@ layout: default
         {% else %}
         {% endif %}
       </ul>
+    <a href="https://mariobarbarino.github.io/manifesto-copyright/">Manifesto e copyright</a>
     <a href="https://mariobarbarino.github.io/privacy-policy/">Privacy policy</a>
     </div>
     <div class="c-copyright">
