--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,9 +62,7 @@ layout: default
         {% else %}
         {% endif %}
       </ul>
-    <a href="https://mariobarbarino.github.io/manifesto-copyright/">Manifesto e copyright</a>
-    <p> - </p>
-    <a href="https://mariobarbarino.github.io/privacy-policy/">Privacy policy</a>
+    <a href="https://mariobarbarino.github.io/manifesto-copyright/">Manifesto e copyright</a> <span> - </span> <a href="https://mariobarbarino.github.io/privacy-policy/">Privacy policy</a>
     </div>
     <div class="c-copyright">
       <p>{{site.time | date: '%Y'}} &copy; {{site.copyright-name}}</p>
