--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,9 @@ layout: home
           <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank"><div data-icon='ei-sc-google-plus' data-size='s'></div></a>
         </div>
       </div>
+      {% if site.mailchimp %}
+        {% include newsletter.html %}
+      {% endif %}
       <div class="c-recent-post">
         <h4 class="c-recent__title">Racconti correlati</h4>
         <div class="c-recent__box">
