--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -26,9 +26,10 @@ $blue-lighter: #dce4ea;
 $blue-dark: #263959;
 
 // Background Colors
-$background: #fbfbfb;
-$alternate-background: #fafafa;
-
+//$background: #fbfbfb;
+//$alternate-background: #fafafa;
+  $background: #ff6b6b;
+  $alternate-background: #c7ffbf;
 
 // Body Color
 $text-color: #404040;
