--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -26,10 +26,10 @@ $blue-lighter: #dce4ea;
 $blue-dark: #263959;
 
 // Background Colors
-//$background: #fbfbfb;
-//$alternate-background: #fafafa;
-  $background: #ff6b6b;
-  $alternate-background: #c7ffbf;
+$background: //#fbfbfb; // light grey
+$background: #e8ecff; // light blue
+$background: //#dce6ee; // light grey-blue
+$alternate-background: #fafafa;
 
 // Body Color
 $text-color: #404040;
