--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -27,8 +27,8 @@ $blue-dark: #263959;
 
 // Background Colors
 //$background: #fbfbfb; // light grey
-$background: #e8ecff; // light blue
-//$background: #dce6ee; // light grey-blue
+//$background: #e8ecff; // light blue
+$background: #dce6ee; // light grey-blue
 $alternate-background: #fafafa;
 
 // Body Color
