--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,18 @@
 {% endif %}
   
 <script data-ad-client="ca-pub-3765935657134703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@1.7.1/v1/cookiesGlow.min.js" async></script>
+<script>
+    var AnalyticsCode = "G-6JKZTEBSJ9"; // Your Analytics tracking code (Optional)
+    var linkHref = "https://mariobarbarino.github.io/privacy-policy/"; // Your Cookies Policy link
+    var bannerPosition = "right"
+    // texts
+    var btn1Text = "Accetta i cookies";
+    var btn2Text = "Rifiuta";
+    var bannerDescription = "In questo sito sono utilizzati cookies tecnici per migliorare l’esperienza di uso e tracciare il numero di visite.";
+    var linkTexto = "Leggi di più sulla Privacy Policy";
+    var manageText = "Gestisci i cookies";
+</script>
   
 </head>
