--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@
   </div> <!-- /.o-wrapper -->
   <div class="c-top" data-icon='ei-chevron-up' data-size='s' title="Scroll To Top"></div> <!-- /.c-top -->
   {% include javascripts.html %}
+  {% include cookie-consent.html %}
 </body>
 </html>
