--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,75 +17,20 @@
     {% endcapture %}
     {{ include_to_scssify | scssify }}
   </style>
+  
+<script data-ad-client="ca-pub-3765935657134703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-  <!-- Only add all this in production, why would I analyse myself when writing the post anyway. -->
-{% if jekyll.environment == 'production' %}
-
-<!-- Add cookie consent css & js -->
-<link rel="stylesheet"
-    type="text/css"
-    href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
-<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js"
-    data-cfasync="false"></script>
-
-<!-- Add google analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6JKZTEBSJ9"></script>
-
+<script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@1.7.1/v1/cookiesGlow.min.js" async></script>
 <script>
-    // Reads the value of a cookie by name or returns empty string
-    function getCookie(name) {
-        var b = document.cookie.match('(^|[^;]+)\\s*' + name + '\\s*=\\s*([^;]+)');
-        return b ? b.pop() : '';
-    }
-
-    // Actually starting analytics up
-    function addAnalytics() {
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-        gtag('config', 'G-6JKZTEBSJ9');
-    }
-
-    // Waiting for the load event
-    window.addEventListener("load", function () {
-        // Reading "cookieconsent_status" cookie
-        const cookieConsent = getCookie('cookieconsent_status');
-
-        // Start analytics if user consented or did not deny
-        if (cookieConsent === 'allow' || cookieConsent === '') {
-            addAnalytics();
-        }
-
-        // Initialise cookie consent banner
-        window.cookieconsent.initialise({
-            "palette": {
-                "popup": {
-                    "background": "#efefef",
-                    "text": "#404040"
-                },
-                "button": {
-                    "background": "#8ec760",
-                    "text": "#ffffff"
-                }
-            },
-            "type": "opt-out",
-            "content": {
-                "allow": "Approve",
-                "dismiss": "Approve",
-                "deny": "Reject"
-            },
-            // Reload the page on user choice to make sure cookie is set
-            onStatusChange: function (status, chosenBefore) {
-                location.reload();
-            }
-        })
-    });
+    var AnalyticsCode = "G-6JKZTEBSJ9"; // Your Analytics tracking code (Optional)
+    var linkHref = "https://mariobarbarino.github.io/privacy-policy/"; // Your Cookies Policy link
+    var bannerPosition = "right"
+    // texts
+    var btn1Text = "Accetta i cookies";
+    var btn2Text = "Rifiuta";
+    var bannerDescription = "In questo sito sono utilizzati cookies tecnici per migliorare l’esperienza di uso e tracciare il numero di visite.";
+    var linkTexto = "Leggi di più sulla Privacy Policy";
+    var manageText = "Gestisci i cookies";
 </script>
-
-{% endif %}
   
 </head>
