--- a/_sass/5-components/_header.scss
+++ b/_sass/5-components/_header.scss
@@ -104,7 +104,7 @@
       &.is-active {
         box-shadow: 0 0 0 rgba(132, 135, 138, 0.5);
         transform: translateY(1px);
-        color: $secondary-color;
+        color: $dark; //$secondary-color;
         &:hover {
           background-color: $background;
         }
