--- a/_sass/5-components/_header.scss
+++ b/_sass/5-components/_header.scss
@@ -102,11 +102,11 @@
         background-color: $white-color;
       }
       &.is-active {
-        box-shadow: 0 0 0 rgba(132, 135, 138, 0.5);
+        border: 1px solid $blue-lighter; //box-shadow: 0 0 0 rgba(132, 135, 138, 0.5);
         transform: translateY(1px);
         color: $dark; //$secondary-color;
         &:hover {
-          background-color: $background;
+          background-color: $white-color; //$background;
         }
       }
       &:first-child {
