--- a/_sass/0-settings/_colors.scss
+++ b/_sass/0-settings/_colors.scss
@@ -19,6 +19,7 @@ $gray-dark: #757575;
 $gray-light: #dddddd;
 $gray-lighten: #edeeee;
 $gray-lighter: #cccccc;
+$gray-lightest: #f7f7f7;
 
 $blue: #33aaff;
 $blue-light: #cfcfdd;
