--- a/_sass/5-components/_header.scss
+++ b/_sass/5-components/_header.scss
@@ -105,6 +105,7 @@
         border: 1px solid $blue-lighter; //box-shadow: 0 0 0 rgba(132, 135, 138, 0.5);
         transform: translateY(1px);
         color: $dark; //$secondary-color;
+	background-color: $gray-lightest; //riga aggiunta per colorare il bottone selezionato
         &:hover {
           background-color: $white-color; //$background;
         }
