Javascript for random post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,3 +10,11 @@
   {% include javascripts.html %}
 </body>
 </html>
+
+<script type="text/javascript">
+
+    var postsHREF = [{% for post in site.posts %}"{{ post.url }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+
+    var postsTitle = [{% for post in site.posts %}"{{ post.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+
+</script>
