--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,8 @@
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
+        <li class="c-nav__item">
+          <div data-icon='ei-star' data-size='s'></div> Random </li>
       </ul>
     </div>
   </div>
