--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,9 +13,9 @@
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
         <li class="c-nav__item">
-          <div data-icon='ei-star' data-size='s'></div> Riviste</li>
+          <div data-icon='ei-dice' data-size='s'></div> Random </li>
         <li class="c-nav__item">
-          <div data-icon='ei-star' data-size='s'></div> Random </li>
+          <div data-icon='ei-star' data-size='s'></div> Riviste</li>
       </ul>
     </div>
   </div>
