--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
         <li class="c-nav__item">
-          <div data-icon='ei-refresh' data-size='s'></div> Random </li>
+          <div data-icon='ei-refresh' data-size='s' href="random.html"></div> Random </li>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
       </ul>
