--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
         <li class="c-nav__item">
-          <div data-icon='ei-refresh' data-size='s' href="https://mariobarbarino.github.io/manifesto-copyright/"></div> Random </li>
+          <div data-icon='ei-refresh' data-size='s'></div><a href="https://mariobarbarino.github.io/manifesto-copyright/">Random</a></li>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
       </ul>
