--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-        <li class="c-nav__item">
-          <a href="https://mariobarbarino.github.io/manifesto-copyright/"><div data-icon='ei-refresh' data-size='s'></div></a> Random</li>
+        <a href="https://mariobarbarino.github.io/manifesto-copyright/"><li class="c-nav__item">
+          <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
       </ul>
