--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,12 @@
     var linkTexto = "Leggi di più sulla Privacy Policy";
     var manageText = "Gestisci i cookies";
 </script>
-  
+
+<script type="text/javascript">
+
+    var postsHREF = [{% for post in site.posts %}"{{ post.url }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+
+    var postsTitle = [{% for post in site.posts %}"{{ post.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+
+</script>
 </head>
