--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-        <a href="https://mariobarbarino.github.io/random-post/"><li class="c-nav__item">
+        <a href="https://mariobarbarino.github.io/random-post/" style="color:#222222"><li class="c-nav__item">
           <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
