--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,14 +12,14 @@
     var counter = 0;
     var numberOfPosts = 1;
 
-    var randomIndex;
-    var postHREF;
-    var postTitle;
+    <!-- var randomIndex; -->
+    <!-- var postHREF; -->
+    <!-- var postTitle; -->
 
     randomIndex = Math.floor(Math.random() * postsHREF.length);
     postHREF = postsHREF[randomIndex];
 
-
+  </script>
 
 <header class="c-header">
   <div class="c-header__box">
@@ -44,4 +44,4 @@
   </div>
 </header> <!-- /.c-header -->
   
-</script>
+
