--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     var numberOfPosts = 1;
 
     randomIndex = Math.floor(Math.random() * postsHREF.length);
-    postHREF = postsHREF[randomIndex];
+    postHREF = window.postsHREF[randomIndex];
 
   </script>
 
