--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     var numberOfPosts = 1;
 
     randomIndex = Math.floor(Math.random() * postsHREF.length);
-    postHREF = globalThis.postsHREF[randomIndex];
+    postHREF = postsHREF[randomIndex];
 
   </script>
 
@@ -31,8 +31,7 @@
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-        <!-- <a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item"> -->
-             <a href="https://mariobarbarino.github.io/random-post/" style="color:#222222"><li class="c-nav__item">
+             <a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item">
           <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
