--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,14 +10,24 @@
 
     var randomIndexUsed = [];
     var counter = 0;
-    var numberOfPosts = 1;
+    var numberOfPosts = 5;
+    
+        var randomIndex;
+        var postHREF;
+        var postTitle;
 
-    randomIndex = Math.floor(Math.random() * postsHREF.length);
-    postHREF = globalThis.postsHREF[randomIndex];
+        randomIndex = Math.floor(Math.random() * postsHREF.length);
 
-  </script>
 
-<header class="c-header">
+            postHREF = postsHREF[randomIndex];
+            postTitle = postsTitle[randomIndex];
+    
+                document.write('<p><a href="' + postHREF + '">' + postTitle + '</a></p>');
+          
+
+</script>
+
+<!-- <header class="c-header">
   <div class="c-header__box">
     <div class="c-search">
       <div class="c-search__box">
