--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,33 +1,6 @@
-<script type="text/javascript">
-
-    var postsHREF = [{% for post in site.posts %}"{{ post.url }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-
-    var postsTitle = [{% for post in site.posts %}"{{ post.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}]; 
-                                                                                                                  
-</script>
-
-<script type="text/javascript">
-
-    var randomIndexUsed = [];
-    var counter = 0;
-    var numberOfPosts = 5;
-    
-        var randomIndex;
-        var postHREF;
-        var postTitle;
-
-        randomIndex = Math.floor(Math.random() * postsHREF.length);
 
 
-            postHREF = postsHREF[randomIndex];
-            postTitle = postsTitle[randomIndex];
-    
-                document.write('<p><a href="' + postHREF + '">' + postTitle + '</a></p>');
-          
-
-</script>
-
-<!-- <header class="c-header">
+<header class="c-header">
   <div class="c-header__box">
     <div class="c-search">
       <div class="c-search__box">
@@ -41,7 +14,8 @@
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
           <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-             <a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item">
+             <!-- <a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item"> -->
+          <a href="https://mariobarbarino.github.io/random-post/" style="color:#222222"><li class="c-nav__item">
           <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
         <li class="c-nav__item">
           <div data-icon='ei-star' data-size='s'></div> Riviste</li>
