--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
     
                 <!-- document.write('<p><a href="' + postHREF + '">' + postTitle + '</a></p>'); -->
   
-            document.write('
+   
                 <header class="c-header">
                 <div class="c-header__box">
                   <div class="c-search">
@@ -39,7 +39,7 @@
                     <ul class="c-nav__list u-lists-reset">
                       <li class="c-nav__item is-active">
                         <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-                            <a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item">
+                            <a href="postHREF" style="color:#222222"><li class="c-nav__item">
                         <!--<a href="https://mariobarbarino.github.io/random-post/" style="color:#222222"><li class="c-nav__item">-->
                         <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
                       <li class="c-nav__item">
@@ -48,7 +48,7 @@
                   </div>
                 </div>
               </header> <!-- /.c-header -->
-                           ')
+        
   
 </script>
 
