--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     var numberOfPosts = 1;
     
         var randomIndex;
-        var postHREF;
+        <!-- var postHREF; -->
         var postTitle;
 
         randomIndex = Math.floor(Math.random() * postsHREF.length);
