--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,26 +6,7 @@
                                                                                                                   
 </script>
 
-<script type="text/javascript">
 
-    var randomIndexUsed = [];
-    var counter = 0;
-    var numberOfPosts = 1;
-    
-        var randomIndex;
-        <!-- var postHREF; -->
-        var postTitle;
-
-        randomIndex = Math.floor(Math.random() * postsHREF.length);
-
-
-            postHREF = postsHREF[randomIndex];
-            postTitle = postsTitle[randomIndex];
-    
-                <!-- document.write('<p><a href="' + postHREF + '">' + postTitle + '</a></p>'); -->
-        
-  
-</script>
 
 
 
@@ -43,8 +24,38 @@
                     <ul class="c-nav__list u-lists-reset">
                       <li class="c-nav__item is-active">
                         <div data-icon='ei-pencil' data-size='s'></div> Racconti</li>
-                            <a href="''+postHREF" style="color:#222222"><li class="c-nav__item">
+                        
+                        
+                        
+                        
+                        
+                        <!--<a href="''+postHREF" style="color:#222222"><li class="c-nav__item">-->
                         <!--<a href="https://mariobarbarino.github.io/random-post/" style="color:#222222"><li class="c-nav__item">-->
+                        
+                        <script type="text/javascript">
+
+                        var randomIndexUsed = [];
+                        var counter = 0;
+                        var numberOfPosts = 1;
+
+                        var randomIndex;
+                        <!-- var postHREF; -->
+                        var postTitle;
+
+                        randomIndex = Math.floor(Math.random() * postsHREF.length);
+
+
+                        postHREF = postsHREF[randomIndex];
+                        postTitle = postsTitle[randomIndex];
+
+                        document.write('<a href="' + postHREF + '" style="color:#222222"><li class="c-nav__item">');
+
+                        </script>
+                        
+                        
+            
+                        
+                        
                         <div data-icon='ei-refresh' data-size='s'></div> Random</li></a>
                       <li class="c-nav__item">
                         <div data-icon='ei-star' data-size='s'></div> Riviste</li>
