--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 
-    var postsHREF = [{% for post in site.posts %}"{{ post.url }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+    var postsHREF = [{% for post in site.posts offset:1 limit:1000 %}"{{ post.url }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
 
-    var postsTitle = [{% for post in site.posts %}"{{ post.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}]; 
+    var postsTitle = [{% for post in site.posts offset:1 limit:1000 %}"{{ post.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}]; 
                                                                                                                   
 </script>
 
